--- a/bye.html
+++ b/bye.html
@@ -1,19 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+   <meta charset="UTF-8">
+    <title> Digital Portfolio</title></head><body style="background-color:darkkhaki;">
 
-<html>
-  <body>
-<font size="+3"><header> Done by: Zaenb Al Ameri</header></font>
-  <body style="background-color:darkkhaki;">
-   <font size="+3"> <a href="index.html" >Home </a></font>
-    <font size="+3">   <a href="hey.html" >Digital Portfolio </a></font>
-<font size="+3">	  <a href="bye.html"> Isp </a></font>
-<font size="+3"><a href="hola.html"> Fingerprints </a></font>
-	  <h1 style="background-color:sienna;">ISP </h1>
+  <h2 style="color:brown">
+Done by: Zaenb Al Ameri<br>
+    <a href="index.html" >Home </a><br>
+    <a href="hey.html" >Digital Portfolio </a><br></h2>
+<h1> <a href="bye.html"> Isp </a></h1>
+<h2 style="color:brown"><a href="hola.html"> Fingerprints </a><br></h2>
 
-<p style="color:saddlebrown;"><font size="+3"><b> Computer Science l</b>  was one of my favorite classes last year because it was so entertaining and full of activities and l learned how to animate stuff, code shapes and make it into something creative, number system, computer history, karel, bolean algebra, and much more but one of the most important thing was time managment. <br><br><b> ISP (Concept):</b> last year, l worked with a girl named Briana and we made a very interesting and creative ISP about a moving car (it can go forward and backward) and it must avoid the ghosts that wander around it at random directions. If a ghost touches the car three times, you lose , and you can avoid that by tapping on the ghost. We also had background design and a cursor. <br><br> We were<b> inspired (motivation)</b> by the movie Ghostbusters because we both love it, so we decided to incorporate it into our game and make something similiar to it<br><br> A cool code is that the whole game works when the variable called gamset equals true and once you equal it to false the entire game stops. <b>Code:</b> <img src="https://i.postimg.cc/XqXjyVfY/ISP-Presentation.jpg" width="400" height="400" <br><br>. In the end l believe the game was perfect, and we did struggle with some of the code but we managed to work our way or ask the teacher.                </font>   </p>
+
+<h1 style="background-color:sienna;">ISP </h1>
+
+<h1 style="color:saddlebrown;"><b> Computer Science l</b>  was one of my favorite classes last year because it was so entertaining and full of activities and l learned how to animate stuff, code shapes and make it into something creative, number system, computer history, karel, bolean algebra, and much more but one of the most important thing was time managment. <br><br><b> ISP (Concept):</b> last year, l worked with a girl named Briana and we made a very interesting and creative ISP about a moving car (it can go forward and backward) and it must avoid the ghosts that wander around it at random directions. If a ghost touches the car three times, you lose , and you can avoid that by tapping on the ghost. We also had background design and a cursor. <br><br> We were<b> inspired (motivation)</b> by the movie Ghostbusters because we both love it, so we decided to incorporate it into our game and make something similiar to it<br><br> A cool code is that the whole game works when the variable called gamset equals true and once you equal it to false the entire game stops. <b>Code:</b> <img src="https://i.postimg.cc/XqXjyVfY/ISP-Presentation.jpg" width="400" height="400" alt="code"> <br><br>. In the end l believe the game was perfect, and we did struggle with some of the code but we managed to work our way or ask the teacher.                </h1>
 
     
     
 
 </body>
 
-  </html>
+ 
