--- a/hey.html
+++ b/hey.html
@@ -1,26 +1,26 @@
-<html>
-  <body>
-<font size="+3"><header> Done by: Zaenb Al Ameri</header></font>
-<body style="background-color:lightgreen;">
-<font size="+3">  <a href="index.html"> Home</a></font>
- <font size="+3"> <a href="hey.html"> Digital Portfolio</a></font>
- <font size="+3"> <a href="bye.html"> Isp</a></font>
- <font size="+3"> <a href="hola.html"> Fingerprints</a></font>  
+<!DOCTYPE HTMl>
+<html lang="en">
+  <head>
+<meta charset="UTF-8">
+<title> Digital Portfolio</title></head><body style="background-color:lightgreen;">
+<h2 style="color:darkgreen">  Done by: Zaenb Al Ameri<br>    
+<a href="index.html"> Home</a> </h2>
+<h1 style="color:darkgreen"> <a href="hey.html"> Digital Portfolio</a></h1>
+ <h2 style="color:darkgreen"> <a href="bye.html"> Isp</a><br>
+ <a href="hola.html"> Fingerprints</a></h2>  
 
 <h1 style="background-color:seagreen;"> Digital Portfolio</h1>
 
 
-  <p style="color:green;">
-
-<font size="+3">
+  <h1 style="color: green;">
     This Digital Portfolio is very important to me because it explains what l have been through(my experiences), my hobbies, and my future dream.
-    Hopefully, one day, l will share this portfolio with everyone and show them that although life isnt always simple, we must always mover forward, solve problems as they arise, and never give up .<b>You never know what will happen next because life is always changing. The piece of advice that l always follow while doing homeworks or in my everyday life is to aim for more in everything </b>. One day, l hope l achieve my goals, reread my Digital Portfolio to make sure l did what l said l would do, and then publish it to the world so they can see that life is nothing without challenges. </font>
+    Hopefully, one day, l will share this portfolio with everyone and show them that although life isnt always simple, we must always mover forward, solve problems as they arise, and never give up .<b>You never know what will happen next because life is always changing. The piece of advice that l always follow while doing homeworks or in my everyday life is to aim for more in everything </b>. One day, l hope l achieve my goals, reread my Digital Portfolio to make sure l did what l said l would do, and then publish it to the world so they can see that life is nothing without challenges.</h1>
 
-  </p>
+ 
 
-  <img src="https://i.postimg.cc/1XtdmPjc/images.png" width="190" height="230">
-<img src="https://i.postimg.cc/CL03nTf0/images-3.jpg" width="190" height="230">
+  <img src="https://i.postimg.cc/1XtdmPjc/images.png" width="190" height="230" alt="You can do it">
+<img src="https://i.postimg.cc/CL03nTf0/images-3.jpg" width="190" height="230" alt="Life is always changing">
 
-<font size="+3"><footer> Fun Fact: Green is the second most favorite color in the whole world</footer></font>
+<h2> Fun Fact: Green is the second most favorite color in the whole world</h2>
+
 </body>
-</html>
