--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 
-<html>
-  <head>
+<!DOCTYPE html>
 
-    
-<body style="background-color:pink;">    
-<font size="+3"><header> Done by: Zaenb Al Ameri </header> </font>
-<font size="+3"> <a href="index.html" > Home </a></font>
-<font size="+3">    <a href="hey.html"> Digital Portfolio </a></font>
- <font size="+3">   <a href="bye.html" > Isp </a></font>
-<font size="+3"><a href="hola.html"> Fingerprints</a></font>
-  </head> 
-  <body>
+<html lang="en">
+  <head>
+<meta charset="UTF-8">
+    <title> Digital portfolio </title></head><body style="background-color:lightpink;">
+    <h2 style="color:deeppink"> Done by: Zaenb Al Ameri </h2> 
+<h1> <a href="index.html" > Home </a></h1>
+<h2 style="color:pink">   <a href="hey.html"> Digital Portfolio </a><br>
+    <a href="bye.html" > Isp </a><br>
+<a href="hola.html"> Fingerprints</a></h2>
+   
+ 
 
 
 <h1 style="background-color:Deeppink;"> About Me Page</h1>
 
-<p style="color:purple;">
 
 
 
 
 
-<font size="+3">
-  Hello, my name is Zaenb Al Ameri, although lm a junior right now, lm still just 15 years old because my birthday is on September 6,2006.My hobbies are baking, dancing, playing the piano, drawing, and learning new languages, l can currently speak Spanish, Arabic, English, and l can understand Korean. Fun fact: lm a ballerina, and l places second place in national competition.</br><br>This is my first year in the US because l spent my entire life in UAE, Dubai, and they have a completely different culture and language and my friends and family are there. Because of this, it was difficult for me to adjust to life in the US, but l had to do it because if l cant do that, what else will l be able to do in life?. Before we know it everything went by quickly and then school started, then, on the first day, l  met my best friend Jana, who made me adapt to the school and the US in general.
 
-</br><br> Lastly, My goal is to either be a doctor or do something in computer science, l know that they are two different careers, but l love them both.l want to pursue a career that l love so that l can work hard and enjoy myself at the same time.</br>
+<h1 style="color:purple;">
+  Hello, my name is Zaenb Al Ameri, although lm a junior right now, lm still just 15 years old because my birthday is on September 6,2006.My hobbies are baking, dancing, playing the piano, drawing, and learning new languages, l can currently speak Spanish, Arabic, English, and l can understand Korean. Fun fact: lm a ballerina, and l places second place in national competition.<br><br>This is my first year in the US because l spent my entire life in UAE, Dubai, and they have a completely different culture and language and my friends and family are there. Because of this, it was difficult for me to adjust to life in the US, but l had to do it because if l cant do that, what else will l be able to do in life?. Before we know it everything went by quickly and then school started, then, on the first day, l  met my best friend Jana, who made me adapt to the school and the US in general.
+
+<br><br> Lastly, My goal is to either be a doctor or do something in computer science, l know that they are two different careers, but l love them both.l want to pursue a career that l love so that l can work hard and enjoy myself at the same time.<br>
 
 
-  <b>My dream is to create a product that the entire globe needs, much like Iphone and cars.</b> </font> </p><meta charset="UTF-8">
-
+  <b>My dream is to create a product that the entire globe needs, much like Iphone and cars.</b> </h1>
 
 <img src="https://i.postimg.cc/L4tzQzYR/ballerina-jumping.webp " width="190" height="230" alt="ballerina">
-<img src="https://i.postimg.cc/SxvTQWf3/images-1.jpg" width="190" height="230"
-<img src="https://i.postimg.cc/PqHLw7yw/images-2.jpg" width="150" height="180">
+<img src="https://i.postimg.cc/SxvTQWf3/images-1.jpg" width="190" height="230" alt="languages">
 
-<font size="+2"><footer> Helped: Jana Daouk</footer></font>
-  </body>
-</html> 
+
+										    <h2> Helped: Jana Daouk </h2>
+	</body>								    
