--- a/hola.html
+++ b/hola.html
@@ -21,7 +21,9 @@ What exactly are fingerprints and what are they used for? well, you are lucky to
 
 </h1>
 
-  <h2>
-  <b> Citations:</b><br> 1- Tunggal, A. T. (n.d.). What is a man-in-the-middle attack and how can it be prevented: Upguard. RSS. <br> 2-Constantin, L. (2021, January 13). What is hashing : How this cryptographic process protects passwords. CSO Online.<br> 3-Awati, R., & Loshin, p. (2021, September 1). What is a Certificate Authority (CA)? SearchSecurity. </h2> 
+  <h1>
+  <b> Citations:</b><br> 1- Tunggal, A. T. (n.d.). What is a man-in-the-middle attack and how can it be prevented: Upguard. RSS. <br> 2-Constantin, L. (2021, January 13). What is hashing : How this cryptographic process protects passwords. CSO Online.<br> 3-Awati, R., & Loshin, p. (2021, September 1). What is a Certificate Authority (CA)? SearchSecurity.<br><b>Link to my github account:</b> <a href="https://github.com/Zaenb/Digital-Portfolio">github link</a> </h1> 
   
-</body>
+
+
+  </body>
