--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h2 style="color:deeppink"> Done by: Zaenb Al Ameri </h2>
     <h1> <a href="index.html"> Home Page </a></h1>
 <h2 style="color:deeppink"> <a href="DigitalPortfolio.html"> Digital Portfolio </a> <br>
-  <a href="lSP.html"> lSP</a><br> <a href="fingerprints.html"> Fingerprints </a></h2>
+  <a href="lsp.html"> lSP</a><br> <a href="fingerprints.html"> Fingerprints </a></h2>
 
 <h1 style="background-color:deeppink;"> About Me Page</h1>
 
