--- a/CS-II/Essay/fingerprints.html
+++ b/CS-II/Essay/fingerprints.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -7,6 +8,7 @@
       .p1 {
 	  font-family: "Lucida Console", "Courier New", monospace;
 	  text-align: center;
+	  font-size: 2em;
       }
       ul {list-style-type: none;
 	  margin: 0;
@@ -16,6 +18,7 @@
 	 }
       li {float: left ;
 	  border-right:1px solid blue;
+	  font-size: 2em;
 	 }
       li:last-child{
 	  border-right: none;
@@ -35,16 +38,23 @@
     <meta charset="UTF-8">
     <title> Digital Portfolio </title></head><body style="background-color:powderblue;">
     <ul>
-<li><a href="index.html" > Home Page </a></li>
-<li><a href="DigitalPortfolio.html"> Digital Portfolio </a></li>
-<li><a href="lsp.html" > Isp </a></li>
+<li><a href="../../CS-II/index.html" > Home Page </a></li>
+<li><a href="../../CS-II/DigitalPortfolio.html"> Digital Portfolio </a></li>
+<li><a href="../../CS-II/lsp.html" > Isp </a></li>
 <li><a href="fingerprints.html"> Fingerprints</a></li>
- <li> <a href='AI Sentience.html'> AI Sentience</a></li>
-</ul>  
+ <li> <a href="AI Sentience.html"> AI Sentience</a></li>
+<li> <a href="../../CS-II/Projects/Optimal Sort.html"> Optimal Sorting</a></li>
+    </ul>  
 
-<h1 style="background-color:mediumturquoise;"> Fingerprints</h1>
+    <h1 style="background-color:mediumturquoise;"> Fingerprints</h1>
 
-<p class="p1"> What exactly are fingerprints and what are they used for? Well, you are lucky to have stumbled upon this, so continue reading to find out. Lets start with HTTPS, its first main purpose is to encrypt data in a way that is impossible to decode, this leads us to its second purpose, which is that you are much safer and can browse the internet without worrying that someone will discover your password, credit card number, home address, and it can also increase the website security, so make sure you always have "https" instead of "http" in your URL, if you want to protect yourself and if not it your loss. <br><br> On the other hand, contrasted with school, workplace, and other locations all use HTTPS proxy appliance, which is a respond protocol between clients and servers used for secure communications, to prevent access to insecure or wrong websites. Oh, and have you heard of MITM? No? Well, it is a highly dangerous term that stand for man in the middle attack, and it can occur due to public internet connection, wrong browser, or it can be normal browsers too and then they will steal your personal information. Do you guys enjoy eating hash brown? Well, lets switch it up today because in computer science, hashing is cryptographic technique that may be used to verify the legitimacy of various sorts of input to prevent storing plaintext passwords in databases, what makes hash good is that it is impossible for an attacker to find another message whosehashes are identical after knowing the hash of one message. Similiar to that, you clearly recall California when you think of CA right. Well, lets switch things up one more. A certificate authority (CA) in computer science is reputable organization that issues SSL certificates, these digital certificates are data files that are used to link an entity cryptographically to public key. <br><br> Unfortunately SSL cannot be prevented, however it can be avoided because all SSL -intercepting proxy appliances must provide a certificate containing a public key for which is has a corresponding private key and the private key cannot be the same as the remote server because no one knows it. In addition, False-positive refers to thinking that you have been intercepted when you havent while false-negative is when you believe you are not intercepted but you actually have. <br><br> l believe  that the government and schools should have access to our internet because you never know when you might get a virus or a hacker, so they can help protect us from them. In the end, it is very important to always be careful about every website you visit and make sure you never give your personal data to evey website or else then get prepared to be robbed one day. <br> <img src="https://i.postimg.cc/SQBy8Vfb/Untitled-presentation.jpg" width="800" height="900" alt="Flowchart">
+   <p class="p1">  Name: Zaenb Al Ameri<br>
+	(Allen ISD STEAM center)<br>
+	(Advanced Computer Science II)<br>
+Teacher name:David Ben-yaakov<br>
+	Due Date: Aug 25, 2022</p>
+    
+<p class="p1"><br><br><br> What exactly are fingerprints and what are they used for? Well, you are lucky to have stumbled upon this, so continue reading to find out. Lets start with HTTPS, its first main purpose is to encrypt data in a way that is impossible to decode, this leads us to its second purpose, which is that you are much safer and can browse the internet without worrying that someone will discover your password, credit card number, home address, and it can also increase the website security, so make sure you always have "https" instead of "http" in your URL, if you want to protect yourself and if not it your loss. <br><br> On the other hand, contrasted with school, workplace, and other locations all use HTTPS proxy appliance, which is a respond protocol between clients and servers used for secure communications, to prevent access to insecure or wrong websites. Oh, and have you heard of MITM? No? Well, it is a highly dangerous term that stand for man in the middle attack, and it can occur due to public internet connection, wrong browser, or it can be normal browsers too and then they will steal your personal information. Do you guys enjoy eating hash brown? Well, lets switch it up today because in computer science, hashing is cryptographic technique that may be used to verify the legitimacy of various sorts of input to prevent storing plaintext passwords in databases, what makes hash good is that it is impossible for an attacker to find another message whosehashes are identical after knowing the hash of one message. Similiar to that, you clearly recall California when you think of CA right. Well, lets switch things up one more. A certificate authority (CA) in computer science is reputable organization that issues SSL certificates, these digital certificates are data files that are used to link an entity cryptographically to public key. <br><br> Unfortunately SSL cannot be prevented, however it can be avoided because all SSL -intercepting proxy appliances must provide a certificate containing a public key for which is has a corresponding private key and the private key cannot be the same as the remote server because no one knows it. In addition, False-positive refers to thinking that you have been intercepted when you havent while false-negative is when you believe you are not intercepted but you actually have. <br><br> l believe  that the government and schools should have access to our internet because you never know when you might get a virus or a hacker, so they can help protect us from them. In the end, it is very important to always be careful about every website you visit and make sure you never give your personal data to evey website or else then get prepared to be robbed one day. <br> <img src="https://i.postimg.cc/SQBy8Vfb/Untitled-presentation.jpg" width="800" height="900" alt="Flowchart">
 </p>
 
 <h2><b> Citations:</b><br> 1- Tunggal, A. T. (n.d.). What is a man-in-the-middle attack and how can it be prevented: Upguard. RSS.<br>
