--- a/CS-II/DigitalPortfolio.html
+++ b/CS-II/DigitalPortfolio.html
@@ -7,6 +7,7 @@
       .p1 {
 	  font-family: "Lucida Console", "Courier New", monospace;
 	  text-align: center;
+	  font-size: 2em;
       }
       ul { list-style-type: none;
 	   margin: 0;
@@ -16,6 +17,7 @@
 	 }
       li {float: left;
 	  border-right:1px solid darkgreen;
+	  font-size: 2em;
 	 }
       li:last-child {
 	  border-right: none;
@@ -41,9 +43,10 @@
 <li><a href="index.html"> Home Page</a></li>
 <li>  <a href="DigitalPortfolio.html"> Digital Portfolio</a></li>
 <li>   <a href="lsp.html"> Isp</a></li>
-      <li>   <a href="fingerprints.html"> Fingerprints</a></li>
-  <li>  <a href='AI Sentience.html'> AI Sentience</a></li>
-</ul>
+      <li>   <a href="Essay/fingerprints.html"> Fingerprints</a></li>
+  <li>  <a href="Essay/AI Sentience.html"> AI Sentience</a></li>
+<li> <a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
+    </ul>
 
 <h1 style="background-color:seagreen;"> Digital Portfolio</h1>
 
