--- a/CS-II/lsp.html
+++ b/CS-II/lsp.html
@@ -4,7 +4,7 @@
     <style>
       .p1 {
 	  font-family: "Lucida Console", "Courier New", monospace;
-	 
+	  font-size: 2em;	 
       }
       ul {list-style-type: none;
 	  margin: 0;
@@ -14,6 +14,7 @@
 	 }
       li {float: left;
 	  border-right:1px solid saddlebrown;
+	  font-size: 2em;
 	 }
       li:last-child{
 	  border-right: none;
@@ -41,8 +42,9 @@
 <li>   <a href="index.html" >Home Page </a></li>
 <li>    <a href="DigitalPortfolio.html">Digital Portfolio </a></li>
  <li>   <a href="lsp.html"> Isp </a></li>
-    <li><a href="fingerprints.html"> Fingerprints </a></li>
-<li><a href='AI Sentience.html'> AI Sentience</a></li>
+    <li><a href="Essay/fingerprints.html"> Fingerprints </a></li>
+<li><a href="Essay/AI Sentience.html"> AI Sentience</a></li>
+<li> <a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
 </ul>
 <h1 style="background-color:sienna;"> ISP </h1>
 
