--- a/CS-II/DigitalPortfolio.html
+++ b/CS-II/DigitalPortfolio.html
@@ -1,60 +1,32 @@
 
+
 <!DOCTYPE HTML>
 
 <html lang="en">
   <head>
-    <style>
-      .p1 {
-	  font-family: "Lucida Console", "Courier New", monospace;
-	  text-align: center;
-	  font-size: 2em;
-      }
-      ul { list-style-type: none;
-	   margin: 0;
-	   padding: 0;
-	   overflow: hidden;
-	   background-color: seagreen;
-	 }
-      li {float: left;
-	  border-right:1px solid darkgreen;
-	  font-size: 2em;
-	 }
-      li:last-child {
-	  border-right: none;
-      }
-      li a{ display: block;
-	    color: white;
-	    text-align: center;
-	    padding: 14px 16px;
-	    text-decoration: none;
-	  }
-      li a:hover:not(.active){
-	  background-color: forestgreen;
-      }
-      .active{ background-color: green;
-	     }
-      </style>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
 
-    <title> Digital Portfolio</title></head><body style="background-color:lightgreen;">
+    <title> Digital Portfolio</title></head>
 
 
     <ul>
-<li><a href="index.html"> Home Page</a></li>
-<li>  <a href="DigitalPortfolio.html"> Digital Portfolio</a></li>
+
+      <li><a href="index.html"> Home </a></li>
+<li> <a href="Home.html"> About me page</a></li>
+      <li>  <a href="DigitalPortfolio.html"> Digital Portfolio</a></li>
 <li>   <a href="lsp.html"> Isp</a></li>
       <li>   <a href="Essay/fingerprints.html"> Fingerprints</a></li>
   <li>  <a href="Essay/AI Sentience.html"> AI Sentience</a></li>
 <li> <a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
     </ul>
 
-<h1 style="background-color:seagreen;"> Digital Portfolio</h1>
+<p class="p2">Digital Portfolio</p>
 
 
   <p class="p1">
-    This Digital Portfolio is very important to me because it explains what l have been through(my experiences), my hobbies, and my future dream.
+<br><br><br>    This Digital Portfolio is very important to me because it explains what l have been through(my experiences), my hobbies, and my future dream.
     Hopefully, one day, l will share this portfolio with everyone and show them that although life isnt always simple, we must always move forward, solve problems as they arise, and never give up .<b>You never know what will happen next because life is always changing. The piece of advice that l always follow while doing homeworks or in my everyday life is to aim for more in everything </b>. One day, l hope l achieve my goals, reread my Digital Portfolio to make sure l did what l said l would do, and then publish it to the world so they can see that life is nothing without challenges.</p>
-
   <img src="https://i.postimg.cc/1XtdmPjc/images.png" width="190" height="230" alt="You can do it">
 <img src="https://i.postimg.cc/CL03nTf0/images-3.jpg" width="190" height="230" alt="Life is always changing">
 
