--- a/CS-II/Essay/AI Sentience.html
+++ b/CS-II/Essay/AI Sentience.html
@@ -4,44 +4,14 @@
 <html lang="en">
   
   <head>
-    <style>
-      .p1 {
-	  font-family: "Lucida Console", "Courier New", monospace;
-	  text-align: center;
-	  font-size: 2em;
-      }
-      ul { list-style-type: none;
-	   margin: 0;
-	   padding: 0;
-	   overflow: hidden;
-	   background-color:peru;
-	 }
-      li { float: left;
-	   border-right: 1px solid brown;
-	   font-size: 2em;
-	 }
-      li:last-child{
-	  border-right: none;
-      }
-      li a{ display: block;
-	    color: white;
-	    text-align: center;
-	    padding: 14px 16px;
-	    text-decoration: none;
-	  }
-      li a:hover:not(.active){
-	  background-color: tan;
-      }
-      .active{
-	  background-color: brown;
-      }
-      </style>
-		
+
+    <link rel="stylesheet" href="../../CS-II/style.css">		
 			    
     <meta charset="UTF-8">
-    <title> Digital Portfolio </title></head><body style="background-color:sandybrown;">
+    <title> Digital Portfolio </title></head>
    <ul>
-<li><a href="../../CS-II/index.html" > Home Page </a></li>
+<li><a href="../../CS-II/index.html" > Home  </a></li>
+<li><a href="../../CS-II/Home.html">About Me Page
 <li><a href="../../CS-II/DigitalPortfolio.html"> Digital Portfolio </a></li>
 <li><a href="../../CS-II/lsp.html" > Isp </a> </li>
   <li>  <a href="fingerprints.html"> Fingerprints</a></li>
@@ -49,8 +19,8 @@
 <li><a href="../../CS-II/Projects/Optimal Sort.html"> Optimal Sorting</a></li> 
     </ul>
 
-    <h1 style="background-color:peru;"> AI Sentience <br> reasons why AI Sentience is dangerous</h1>
-    <p class="p1"> Name: Zaenb Al Ameri<br>
+    <p class="p2"><b>AI Sentience <br> reasons why AI Sentience is dangerous</b></p>
+    <p class="p1"><br><br><br> Name: Zaenb Al Ameri<br>
       (Allen ISD STEAM center)<br>
       (Advanced Computer Science II)<br>
       Teacher Name: David Ben-yaakov<br>
