--- a/CS-II/Projects/Optimal Sort.html
+++ b/CS-II/Projects/Optimal Sort.html
@@ -1,60 +1,30 @@
+
+
 <!DOCTYPE HTML>
 
 <html lang="en">
   <head>
-    <style>
-
-      .p1 {
-	  font-family: "Lucida Console", "Courier New", monospace;
-	  text-align: center;
-	  font-size: 2em;
-      }
-
-      ul { list-style-type: none;
-	   margin: 0;
-	   padding: 0;
-	   overflow: hidden;
-	   background-color: mediumorchid;
-	 }
-      li {float: left;
-	  border-right: 1px solid orchid;
-	  font-size: 2em;
-	 }
-      li:last-child{
-	  border-right: none;
-      }
-      li a{ display: block;
-	    color: white;
-	    text-align: center;
-	    padding: 14px 16px;
-	    text-decoration: none;
-	  }
-      
-      li a:hover:not(.active){
-	  background-color: plum;
-      }
-      .active{ background-color: green;
-	     }
-    </style>
+    <link rel="stylesheet" href="../../CS-II/style.css">
     <meta charset="UTF-8">
-    <title> Digital Portfolio</title></head><body style="background-color: lavender;">
+    <title> Digital Portfolio</title></head>
     <ul>
-      <li> <a href="../../CS-II/index.html"> Home Page </a></li>
+      <li> <a href="../../CS-II/index.html"> Home  </a></li>
+<li> <a href="../../CS-II/Home.html"> About Me page</a></li>
       <li> <a href="../../CS-II/DigitalPortfolio.html"> Digital Portfolio</a><li>
       <li> <a href="../../CS-II/lsp.html"> Isp</a></li>
       <li> <a href="../../CS-II/Essay/fingerprints.html"> Fingerprints</a></li>
       <li> <a href="../../CS-II/Essay/AI Sentience.html"> AI Sentience</a></li>
 <li> <a href="Optimal Sort.html"> Optimal Sorting</a></li>
     </ul>
-    <h1 style="background-color:mediumorchid;"> Optimal Sort</h1>
+    <p class="p2">Optimal Sort</p>
 
 
-    <p class="p1">
-      <b> The code for the Optimal Sorting git hub link:</b> <a href="https://github.com/janadaouk/Optimal-Sort"> Git hub link for the code </a>         <br><br>
-
+    <p class="p1"><br><br><br>
+      <b> The code for the Optimal Sorting git hub link:</b> <a href="https://github.com/janadaouk/Optimal-Sort"> Click here </a>         <br><br>
+<b> The spreadsheet and the summary sheet:</b><a href="https://docs.google.com/spreadsheets/d/1Aos6y-B_5e3UM5kvWZoCeY5vmwVDZ5kXZwO51I9QoEI/edit#gid=0">Click here</a> <br><br>
 <b>The Flowchart for the code:</b><br><br>
       <img src="https://i.postimg.cc/gk5TqjVN/Untitled-Diagram-1.jpg" width="800" height="900" alt="Flowchart">
-<br><br>      people included: <br> 1-Zaenb Al Ameri<br> 2-Jana Daouk<br>3- Ibrahim Deir
+<br><br>      people included: <br> 1-Zaenb Al Ameri<br> 2-Jana Daouk<br>3- 
       
     </p>
 
