--- a/CS-II/DigitalPortfolio.html
+++ b/CS-II/DigitalPortfolio.html
@@ -8,7 +8,10 @@
     <meta charset="UTF-8">
 
     <title> Digital Portfolio</title></head>
-
+  <header>
+    <a href="#" class="logo"> Digital Portfolio</a>
+    <nav class="navbar">
+      
 
     <ul>
 
@@ -16,10 +19,15 @@
 <li> <a href="Home.html"> About me page</a></li>
       <li>  <a href="DigitalPortfolio.html"> Digital Portfolio</a></li>
 <li>   <a href="lsp.html"> Isp</a></li>
+      <li><a href="#"> Essays +</a>
+	<ul>
+
       <li>   <a href="Essay/fingerprints.html"> Fingerprints</a></li>
   <li>  <a href="Essay/AI Sentience.html"> AI Sentience</a></li>
-<li> <a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
-    </ul>
+</li></ul>
+
+      <li> <a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
+    </ul></nav></header>
 
 <p class="p2">Digital Portfolio</p>
 
