--- a/CS-II/Home.html
+++ b/CS-II/Home.html
@@ -4,18 +4,29 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title> Digital Portfolio</title></head>
-<ul>
+
+  <header>
+    <a href="#" class="logo"> Digital Portfolio </a>
+    <nav class="navbar">
+      
+  <ul>
  
 
    <li>   <a href="index.html"> Home  </a> </li>
 <li> <a href="Home.html"> About me page</a></li>
-   <li> <a href="DigitalPortfolio.html"> Digital Portfolio </a> </li>
-<li> <a href="lsp.html"> lsp</a></li>
 
+   <li> <a href="DigitalPortfolio.html"> Digital Portfolio </a> </li>
+<li> <a href="lsp.html"> Isp</a></li>
+
+   <li> <a href="#"> Essays +</a>
+     <ul>
 <li> <a href="Essay/fingerprints.html"> Fingerprints </a></li>
-<li><a href='Essay/AI Sentience.html'> AI Sentience</a></li>
+   <li><a href="Essay/AI Sentience.html"> AI Sentience</a></li>
+   </ul></li>
 <li><a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
 </ul>
+</nav>
+</header>
 
 <p class="p2"> About Me Page</p>
 
