--- a/CS-II/Projects/Optimal Sort.html
+++ b/CS-II/Projects/Optimal Sort.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" href="../../CS-II/style.css">
     <meta charset="UTF-8">
     <title> Digital Portfolio</title></head>
-    <ul>
+  <header>
+    <a href="#" class="logo"> Digital Portfolio</a>
+    <nav class="navbar">
+
+  <ul>
       <li> <a href="../../CS-II/index.html"> Home  </a></li>
 <li> <a href="../../CS-II/Home.html"> About Me page</a></li>
       <li> <a href="../../CS-II/DigitalPortfolio.html"> Digital Portfolio</a><li>
       <li> <a href="../../CS-II/lsp.html"> Isp</a></li>
+      <li><a href="#"> Essays +</a>
+	<ul>
+
       <li> <a href="../../CS-II/Essay/fingerprints.html"> Fingerprints</a></li>
       <li> <a href="../../CS-II/Essay/AI Sentience.html"> AI Sentience</a></li>
-<li> <a href="Optimal Sort.html"> Optimal Sorting</a></li>
-    </ul>
+</ul></li>
+
+      <li> <a href="Optimal Sort.html"> Optimal Sorting</a></li>
+    </ul></nav></header>
     <p class="p2">Optimal Sort</p>
 
 
