--- a/CS-II/index.html
+++ b/CS-II/index.html
@@ -4,21 +4,37 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title> Digital Portfolio</title></head>
-<ul>
+  <header>
+    <a href="#" class="logo"> Digital Portfolio</a>
+<nav class="navbar">
+  <ul>
  
 
    <li>   <a href="index.html"> Home </a> </li>
 <li> <a href="Home.html"> About me page</a></li>
+
    <li> <a href="DigitalPortfolio.html"> Digital Portfolio </a> </li>
-<li> <a href="lsp.html"> lsp</a></li>
+<li> <a href="lsp.html"> Isp</a></li>
 
-  <li> <a href="Essay/fingerprints.html"> Fingerprints </a></li>
+<li><a href="#"> Essays +</a>  
+<ul>
+   <li> <a href="Essay/fingerprints.html"> Fingerprints </a></li>
   <li><a href='Essay/AI Sentience.html'> AI Sentience</a></li>
-
-  
+  </ul></li>
 <li> <a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
-</ul>
-</div>
-<h1><br><br> My Digital Portfolio <br><br> Done by: Zaenb Al Ameri <br><br> <a href="https://github.com/Zaenb/Digital-Portfolio"> Github link </a><br><br>     </h1>
+
+  </ul>
+</nav>
+</header>
+
+  <ok> 
+  <div class="text"> Enjoy My</div>
+  <div class="container">
+  
+    <div>Portfolio</div>
+ 
+    </div></ok>
+ 
+<h1><br> My Digital Portfolio <br><br> Done by: Zaenb Al Ameri <br><br> <a href="https://github.com/Zaenb/Digital-Portfolio"> Github link </a><br><br>     </h1>
 
 </body>
