--- a/CS-II/Projects/Optimal Sort.html
+++ b/CS-II/Projects/Optimal Sort.html
@@ -12,10 +12,10 @@
     <nav class="navbar">
 
   <ul>
-      <li> <a href="../../CS-II/index.html"> Home  </a></li>
-<li> <a href="../../CS-II/Home.html"> About Me page</a></li>
-      <li> <a href="../../CS-II/DigitalPortfolio.html"> Digital Portfolio</a><li>
-      <li> <a href="../../CS-II/lsp.html"> Isp</a></li>
+      <li> <a href="../../index.html"> Home  </a></li>
+<li> <a href="../../Home.html"> About Me page</a></li>
+      <li> <a href="../../DigitalPortfolio.html"> Digital Portfolio</a><li>
+      <li> <a href="../../lsp.html"> Isp</a></li>
       <li><a href="#"> Essays +</a>
 	<ul>
 
