--- a/CS-II/Essay/AI Sentience.html
+++ b/CS-II/Essay/AI Sentience.html
@@ -16,10 +16,10 @@
 
 
   <ul>
-<li><a href="../../CS-II/index.html" > Home  </a></li>
-<li><a href="../../CS-II/Home.html">About Me Page
-<li><a href="../../CS-II/DigitalPortfolio.html"> Digital Portfolio </a></li>
-<li><a href="../../CS-II/lsp.html" > Isp </a> </li>
+<li><a href="../../index.html" > Home  </a></li>
+<li><a href="../../Home.html">About Me Page
+<li><a href="../../DigitalPortfolio.html"> Digital Portfolio </a></li>
+<li><a href="../../lsp.html" > Isp </a> </li>
     <li> <a href="#"> Essays +</a>
       <ul>
 
