--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CS-II/style.css">
     <meta charset="UTF-8">
     <title> Digital Portfolio</title></head>
 
@@ -20,10 +20,10 @@
 
    <li> <a href="#"> Essays +</a>
      <ul>
-<li> <a href="Essay/fingerprints.html"> Fingerprints </a></li>
-   <li><a href="Essay/AI Sentience.html"> AI Sentience</a></li>
+<li> <a href="CS-II/Essay/fingerprints.html"> Fingerprints </a></li>
+   <li><a href="CS-II/Essay/AI Sentience.html"> AI Sentience</a></li>
    </ul></li>
-<li><a href="Projects/Optimal Sort.html"> Optimal Sorting</a></li>
+<li><a href="CS-II/Projects/Optimal Sort.html"> Optimal Sorting</a></li>
 </ul>
 </nav>
 </header>
