--- a/CS-II/Projects/Optimal Sort.html
+++ b/CS-II/Projects/Optimal Sort.html
@@ -20,12 +20,18 @@
 	<ul>
 
       <li> <a href="../../CS-II/Essay/fingerprints.html"> Fingerprints</a></li>
-      <li> <a href="../../CS-II/Essay/AI Sentience.html"> AI Sentience</a></li>
+      <li> <a href="../../CS-II/Essay/AI%20Sentience.html"> AI Sentience</a></li>
 </ul></li>
-
-      <li> <a href="Optimal Sort.html"> Optimal Sorting</a></li>
-    </ul></nav></header>
-    <p class="p2">Optimal Sort</p>
+      <li><a href="#"> Projects +</a>
+	<ul>
+	  
+      <li> <a href="Optimal%20Sort.html"> Optimal Sorting</a></li>
+      <li><a href="Business%20Plan/index.html"> Business Plan</a></li>
+<li><a href="ISP/index.html"> ISP </a></li> 
+      </li> </ul>
+  </ul></nav></header>
+<p class="p1"><br><br> Scroll down for Sort Analysis </p>
+  <p class="p2">Optimal Sort</p>
 
 
     <p class="p1"><br><br><br>
@@ -33,10 +39,18 @@
 <b> The spreadsheet and the summary sheet:</b><a href="https://docs.google.com/spreadsheets/d/1Aos6y-B_5e3UM5kvWZoCeY5vmwVDZ5kXZwO51I9QoEI/edit#gid=0">Click here</a> <br><br>
 <b>The Flowchart for the code:</b><br><br>
       <img src="https://i.postimg.cc/gk5TqjVN/Untitled-Diagram-1.jpg" width="800" height="900" alt="Flowchart">
-<br><br>      people included: <br> 1-Zaenb Al Ameri<br> 2-Jana Daouk<br>3- 
-      
-    </p>
-
+      <br><br>      people included: <br> 1-Zaenb Al Ameri<br> 2-Jana Daouk<br>
+      <br><br> Scroll more
+</p>
+    <p class="p2"> Sort Analysis</p>
+<p class="p1"><b>    <b> Click the links for The following code:</b> <br> <a href="https://github.com/Zaenb/bUbbleSort"> 1- Bubble Sort</a>
+    <br> <a href="https://github.com/Zaenb/InsertionSort">2-  Insertion Sort</a>
+    <br> <a href="https://github.com/Zaenb/Selectionsort"> 3- Selection Sort</a>
+</b><br><b> Click the link for: 
+    <br> <a href="https://docs.google.com/spreadsheets/d/19cP5Eycdk1zx7uMuOOZPd2PIJRrmdpUYHhyNhF50mzU/edit#gid=0"> Spreadsheet and the Graph</a>
+</b>
+</p>
+  
 
 
 
