--- a/CS-II/Essay/AI Sentience.html
+++ b/CS-II/Essay/AI Sentience.html
@@ -16,7 +16,7 @@
 
 
   <ul>
-<li><a href="../../index.html" > Home  </a></li>
+  <li><a href="../../index.html" > Home  </a></li>
 <li><a href="../../Home.html">About Me Page
 <li><a href="../../DigitalPortfolio.html"> Digital Portfolio </a></li>
 <li><a href="../../lsp.html" > Isp </a> </li>
@@ -24,10 +24,16 @@
       <ul>
 
     <li>  <a href="fingerprints.html"> Fingerprints</a></li>
-<li><a href="AI Sentience.html"> AI Sentience</a></li>
+<li><a href="AI%20Sentience.html"> AI Sentience</a></li>
     </li></ul>
-    <li><a href="../../CS-II/Projects/Optimal Sort.html"> Optimal Sorting</a></li> 
-    </ul>
+    <li><a href="#"> Projects +</a>
+      <ul>
+    <li><a href="../../CS-II/Projects/Optimal%20Sort.html"> Optimal Sorting</a></li> 
+<li><a href="../../CS-II/Projects/Business%20Plan/index.html"> Business Plan</a></li>
+<li><a href="../../CS-II/Projects/ISP/index.html"> ISP </a></li> 
+    </li></ul>
+      </ul>
+      
 </nav></header>
     <p class="p2"><b>AI Sentience <br> reasons why AI Sentience is dangerous</b></p>
     <p class="p1"><br><br><br> Name: Zaenb Al Ameri<br>
