--- a/CS-II/Essay/fingerprints.html
+++ b/CS-II/Essay/fingerprints.html
@@ -24,10 +24,15 @@
 <li><a href="#"> Essays +</a>
   <ul>
 <li><a href="fingerprints.html"> Fingerprints</a></li>
- <li> <a href="AI Sentience.html"> AI Sentience</a></li>
+ <li> <a href="AI%20Sentience.html"> AI Sentience</a></li>
 </li></ul>
-<li> <a href="../../CS-II/Projects/Optimal Sort.html"> Optimal Sorting</a></li>
-    </ul> </nav></header> 
+<li><a href="#"> Projects +</a>
+  <ul>
+<li> <a href="../../CS-II/Projects/Optimal%20Sort.html"> Optimal Sorting</a></li>
+<li><a href="../../CS-II/Projects/Business%20Plan/index.html"> Business Plan</a></li>
+<li><a href="../../CS-II/Projects/ISP/index.html"> ISP </a></li>
+</li></ul>
+  </ul> </nav></header> 
 
  <p class="p2"><b>Fingerprints</b></p>
 
