--- a/CS-II/Projects/Business Plan/considered.html
+++ b/CS-II/Projects/Business Plan/considered.html
@@ -26,6 +26,7 @@
 	    <li> <a href="../../../CS-II/Projects/Optimal%20Sort.html"> Sort Analysis</a></li>
 	    <li><a href="index.html">Business Plan</a></li>
 <li><a href="considered.html"> Considered Plan </a></li>
+<li><a href="../../Projects/ISP/index.html"> ISP </a></li> 
 	</li></ul>
 
   </ul></nav></header>
