--- a/DigitalPortfolio.html
+++ b/DigitalPortfolio.html
@@ -23,11 +23,17 @@
 	<ul>
 
 	  <li><a href="CS-II/Essay/fingerprints.html"> Fingerprints</a></li>
-  <li>  <a href="CS-II/Essay/AI Sentience.html"> AI Sentience</a></li>
+  <li>  <a href="CS-II/Essay/AI%20Sentience.html"> AI Sentience</a></li>
 </li></ul>
+      <li><a href="#"> Projects +</a>
+      <ul>
+      <li> <a href="CS-II/Projects/Optimal%20Sort.html"> Optimal Sorting</a></li>
+      <li><a href="CS-II/Projects/Business%20Plan/index.html"> Business Plan</a></li>
+<li><a href="CS-II/Projects/ISP/index.html"> ISP </a></li> 
+      </li></ul>
 
-      <li> <a href="CS-II/Projects/Optimal Sort.html"> Optimal Sorting</a></li>
-    </ul></nav></header>
+  </ul></nav></header>
+  
 
 <p class="p2">Digital Portfolio</p>
 
