--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
 <li> <a href="#"> Essays +</a>
   <ul>
 <li> <a href="CS-II/Essay/fingerprints.html"> Fingerprints </a></li>
-<li><a href="CS-II/Essay/AI Sentience.html"> AI Sentience</a></li>
+<li><a href="CS-II/Essay/AI%20Sentience.html"> AI Sentience</a></li>
 </ul></li>
-<li> <a href="CS-II/Projects/Optimal Sort.html"> Optimal Sorting </a></li>
+<li><a href="#"> Projects +</a>
+  <ul>
+    
+<li> <a href="CS-II/Projects/Optimal%20Sort.html"> Optimal Sorting </a></li>
+<li><a href="CS-II/Projects/Business%20Plan/index.html"> Business Plan</a></li>
+<li><a href="CS-II/Projects/ISP/index.html"> ISP </a></li> 
+</ul></li>
 </ul></nav></header>
 
 <body1>
