--- a/lsp.html
+++ b/lsp.html
@@ -20,10 +20,15 @@
 <li><a href="#"> Essays +</a>
   <ul>
 <li><a href="CS-II/Essay/fingerprints.html"> Fingerprints </a></li>
-<li><a href="CS-II/Essay/AI Sentience.html"> AI Sentience</a></li>
+<li><a href="CS-II/Essay/AI%20Sentience.html"> AI Sentience</a></li>
 </li></ul>
-<li> <a href="CS-II/Projects/Optimal Sort.html"> Optimal Sorting</a></li>
-</ul></nav></header>
+<li><a href="#"> Projects +</a>
+  <ul>
+<li> <a href="CS-II/Projects/Optimal%20Sort.html"> Optimal Sorting</a></li>
+<li><a href="CS-II/Projects/Business%20Plan/index.html"> Business Plan</a></li>
+<li><a href="CS-II/Projects/ISP/index.html"> ISP </a></li> 
+</li></ul>
+  </ul></nav></header>
 <p class="p2"> ISP </p>
 
 <p class="p1"><br><br><br><b>Computer Science l</b> was one of my favorite class last year because it was so entertaining and full of activities and l learned how to code shapes, be creative, number system, computer history, karel, bolean algebra, and much more but one of the most important thing was time managment. On the other hand, my other classes were english, world history, algebra 2, chemistry, physics, and spanish 1. <br><br><b> ISP (Concept):</b> last year, l worked with a girl named Briana and we made a very interesting and creative ISP about a moving car (it can go forward and backward) and it must avoid the ghosts that wander around it at random directions. If a ghost touches the car three times,you lose, and you can avoid that by tapping on the ghost. We also had background design and a cursor. <br><br> We were<b> inspired (motivation)</b> by the movie Ghostbusters because we both love it, so we decided to incorporate it into our game and make something similiar to it<br><br> A cool code is that the whole game works when the variable called gamset equals true and once you equal it to false the entire game stops.<br> <b>Code:</b> <img src="https://i.postimg.cc/XqXjyVfY/ISP-Presentation.jpg" width="400" height="400" alt="Code segment"> <br><br>. In the end l believe the game was perfect, and we did struggle with some of the code for example: the cursor, making the car move and the ghosts wandering around the car. But we managed to work our way or ask the teacher.                </p>
