--- a/Home.html
+++ b/Home.html
@@ -20,9 +20,11 @@
 
    <li> <a href="#"> Essays +</a>
      <ul>
-<li> <a href="CS-II/Essay/fingerprints.html"> Fingerprints </a></li>
-   <li><a href="CS-II/Essay/AI%20Sentience.html"> AI Sentience</a></li>
+<li> <a href="CS-II/Essays/fingerprints.html"> Fingerprints </a></li>
+   <li><a href="CS-II/Essays/AI%20Sentience.html"> AI Sentience</a></li>
+<li><a href="CS-II/Essays/Decision%20Making.html"> Decision Making</a></li> 
    </ul></li>
+   
    <li><a href="#"> Projects +</a>
 <ul>
    <li><a href="CS-II/Projects/Optimal%20Sort.html"> Optimal Sorting</a></li>
