--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <li> <a href="lsp.html"> lsp</a></li>
 <li> <a href="#"> Essays +</a>
   <ul>
-<li> <a href="CS-II/Essay/fingerprints.html"> Fingerprints </a></li>
-<li><a href="CS-II/Essay/AI%20Sentience.html"> AI Sentience</a></li>
+<li> <a href="CS-II/Essays/fingerprints.html"> Fingerprints </a></li>
+<li><a href="CS-II/Essays/AI%20Sentience.html"> AI Sentience</a></li>
+<li> <a href="CS-II/Essays/Decision%20Making.html"> Decision Making </a></li> 
 </ul></li>
 <li><a href="#"> Projects +</a>
   <ul>
