--- a/lsp.html
+++ b/lsp.html
@@ -19,8 +19,9 @@
  <li>   <a href="lsp.html"> Isp </a></li>
 <li><a href="#"> Essays +</a>
   <ul>
-<li><a href="CS-II/Essay/fingerprints.html"> Fingerprints </a></li>
-<li><a href="CS-II/Essay/AI%20Sentience.html"> AI Sentience</a></li>
+<li><a href="CS-II/Essays/fingerprints.html"> Fingerprints </a></li>
+<li><a href="CS-II/Essays/AI%20Sentience.html"> AI Sentience</a></li>
+ <li><a href="CS-II/Essays/Decision%20Making.html"> Decision Making</a></li> 
 </li></ul>
 <li><a href="#"> Projects +</a>
   <ul>
