--- a/CS-II/Projects/ISP/Journal.html
+++ b/CS-II/Projects/ISP/Journal.html
@@ -33,7 +33,20 @@
   </ul></nav></header>
    
   <br><br><br><br> <p class="p3"><br><br> <b>Weekly basis journal <br> Name: Zaenb Al Ameri<br> (Allen ISD Steam center)<br> (Advanced computer science II)<br> Teacher name: David Ben-yaakov</b><br><br><br></p>
-<br><br><br>  <h1> Date: 2-jan-2023</h1>
+
+<br><br><br> <h1> Date: 9-Jan-2023</h1>
+  <p class="p1">
+    <br><br><br>
+    <b> Technical Challenges: </b> I believe we haven't encountered any technical difficulties thus far because we've only just begun writing the code, but on the other side, one of the difficulties might be learning C++ well enough to write decent working code in two weeks. We will work to generate a good working code because our product and project manager distributed the task so that we can all assist and learn from one another.<br><br><br>
+
+    <b> Scheduling Challenges: </b> With our project and team manager, we got it lucky. because they are all striving to reduce the amount of work we have to do at once, allowing us more time and space to function and improve our language learning. They distributed the job fairly, so no one was left behind, but it also enables us to move forward and complete the task more effectively. So far, there have been no scheduling issues.<br><br><br>
+    
+    <b> Interpersonal Challenges: </b> The communication app we use is the source of my issue. Discord is what it's called, but I hardly ever open or use it, so I feel like it's not a great way to interact. I thought that everyone would have been more proficient with numbers, but I'll try to get used to using and opening Discord occasionally. Another issue is using C++ to code; I think we could all use some more time to read up a bit on it. Python seemed like it would have been simpler, but I'm going to try to learn more C++.
+    
+</p>    
+
+
+ <br><br><br> <br><br><br>  <h1> Date: 2-jan-2023</h1>
     <p class="p1"> 
   <br><br><br>  
   <b> 1- (Software) Development Engineer: </b> Designing and building computer programs and applications to address real-world issues. therefore they Consider how an application or system will function as a whole when designing each element. It requires a variety of capabilities, such as problem-solving abilities, programming knowledge, and mathematical acumen. Software developers are the innovators who come up with the ideas for all kinds of computer programs.<br>
@@ -67,3 +80,4 @@
 I believe this position might be a good fit for me because, as I've already mentioned, I like thinking outside the box. It will also give me the chance to fix things and ensure that the project is completed in a way that allows it to be used in the real world. The only difficulty I might have is making faults I'm not aware of, but to avoid that, I can double-check and ask my teammates to double-check for me as well.
 
   
+</p>
